    to create an instance that can be injected into a client.

  * finagle-exception: `com.twitter.finagle.exception.ExceptionReporter` is no longer used
    as the default `com.twitter.finagle.util.ReporterFactory`.

  * finagle-kestrel: Replace deprecated finagle-kestrel package with finagle-kestrelx.

6.25.0
------

Breaking API Changes
~~~~~~~~~~~~~~~~~~~~

  * finagle-core: `c.t.f.builder.Server` now implements `c.t.f.ListeningServer`.

  * finagle-core: `c.t.f.Server.serveAndAnnounce` with a `ServiceFactory` had
    its first argument renamed to `name` from `forum`.

  * finagle-core: Add an attribute map to `c.t.f.Addr.Bound`.

  * finagle-core: `c.t.f.builder.ClientConfig.FailFast` has moved to
    `c.t.f.FailFastFactory.FailFast`.

  * finagle-core: NoBrokersAvailableException now has two Dtab constructor
    arguments, both the base and local Dtabs.

  * finagle-core: `c.t.f.Failure` convenience constructors (e.g., `Failure.Cause`,
    `Failure.Rejected`) were removed in favor of uniform flag treatment, and clean
    separation of attributes from interpretation of those attributes.

  * finagle-core: `ExitGuard` usage is now private to finagle.

  * finagle-core: `c.t.f.service.TimeoutFilter.module` is now split into
    `TimeoutFilter.clientModule` and `TimeoutFilter.serverModule`.

  * finagle-core: remove deprecated `c.t.f.builder.ClientBuilder.stack` taking a
    `Stack.Params => Client[Req1, Rep1]`.

  * finagle-core: StackRegistry.Entry takes different constructor arguments, and the
    name has been bundled in with the Stack.Params.  StackRegistry.Entry is only used
    internally, so this should be relatively inexpensive.  Similarly, StackRegister#register
    has also had a small change to its method signature along the same lines.

  * finagle-http: deprecated methods in `c.t.f.http.HttpMessageProxy` have been removed.

  * finagle-memcached / finagle-memcachedx: move TwitterCacheResolver