@@ -2,18 +2,15 @@ package com.twitter.finagle
 
 import com.twitter.conversions.storage._
 import com.twitter.finagle.client._
+import com.twitter.finagle.httpx.{HttpClientTraceInitializer, HttpServerTraceInitializer, HttpTransport, Request, Response}
 import com.twitter.finagle.httpx.codec.{HttpClientDispatcher, HttpServerDispatcher}
-import com.twitter.finagle.httpx.filter.DtabFilter
-import com.twitter.finagle.httpx.{
-  HttpTransport, HttpServerTraceInitializer, HttpClientTraceInitializer,
-  Request, Response
-}
+import com.twitter.finagle.httpx.filter.{DtabFilter, HttpNackFilter}
 import com.twitter.finagle.netty3._
-import com.twitter.finagle.param.{Stats, ProtocolLibrary}
+import com.twitter.finagle.param.{ProtocolLibrary, Stats}
 import com.twitter.finagle.server._
 import com.twitter.finagle.ssl.Ssl
-import com.twitter.finagle.transport.Transport
 import com.twitter.finagle.tracing._
+import com.twitter.finagle.transport.Transport
 import com.twitter.util.{Future, StorageUnit}
 import java.net.{InetSocketAddress, SocketAddress}
 import org.jboss.netty.channel.Channel
@@ -81,12 +78,13 @@ object Httpx extends Client[Request, Response] with HttpxRichClient
   }
 
   object Client {
-    val stack: Stack[ServiceFactory[Request, Response]] = StackClient.newStack
+    val stack: Stack[ServiceFactory[Request, Response]] =
+      StackClient.newStack
+        .replace(TraceInitializerFilter.role, new HttpClientTraceInitializer[Request, Response])
   }
 
   case class Client(
-    stack: Stack[ServiceFactory[Request, Response]] = Client.stack.replace(
-        TraceInitializerFilter.role, new HttpClientTraceInitializer[Request, Response]),
+    stack: Stack[ServiceFactory[Request, Response]] = Client.stack,
     params: Stack.Params = StackClient.defaultParams + ProtocolLibrary("httpx")
   ) extends StdStackClient[Request, Response, Client] {
     protected type In = Any
@@ -152,11 +150,17 @@ object Httpx extends Client[Request, Response] with HttpxRichClient
   def newClient(dest: Name, label: String): ServiceFactory[Request, Response] =
     client.newClient(dest, label)
 
+  object Server {
+    val stack: Stack[ServiceFactory[Request, Response]] =
+      StackServer.newStack
+        .replace(TraceInitializerFilter.role, new HttpServerTraceInitializer[Request, Response])
+        .replace(
+          StackServer.Role.preparer,
+          (next: ServiceFactory[Request, Response]) => (new HttpNackFilter).andThen(next))
+  }
+
   case class Server(
-    stack: Stack[ServiceFactory[Request, Response]] =
-      StackServer.newStack.replace(
-        TraceInitializerFilter.role,
-        new HttpServerTraceInitializer[Request, Response]),
+    stack: Stack[ServiceFactory[Request, Response]] = Server.stack,
     params: Stack.Params = StackServer.defaultParams + ProtocolLibrary("httpx")
   ) extends StdStackServer[Request, Response, Server] {
     protected type In = Any
