@@ -30,6 +30,14 @@ Breaking API Changes
 
   * finagle-kestrel: Replace deprecated finagle-kestrel package with finagle-kestrelx.
 
+New Features
+~~~~~~~~~~~~
+  * finagle-httpx: Support nacks between Finagle Http clients and servers. When a server fails 
+    with retryable exceptions (exceptions wrapped by `Failure.rejected`), it sends back a "Nack" 
+    response, i.e. 503 Response code with a new "finagle-http-nack" header. This allows clients 
+    to safely retry failed requests, and keep connections open.
+
+
 6.25.0
 ------
 
